--- a/index.html
+++ b/index.html
@@ -154,6 +154,55 @@
         font-size: 12px;
       }
 
+      /* Search + table styles */
+      .search-row {
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 6px;
+      }
+      .input {
+        padding: 10px 12px;
+        border-radius: 10px;
+        border: 1px solid rgba(255,255,255,0.08);
+        background: rgba(255,255,255,0.04);
+        color: var(--text);
+        outline: none;
+        min-width: 260px;
+      }
+      .input::placeholder { color: #9ca3af; }
+      .button {
+        padding: 10px 14px;
+        border-radius: 10px;
+        border: 1px solid rgba(96,165,250,0.35);
+        background: linear-gradient(180deg, rgba(96,165,250,0.25), rgba(96,165,250,0.12));
+        color: #e5f0ff;
+        font-weight: 600;
+        cursor: pointer;
+      }
+      .button:hover { filter: brightness(1.08); }
+
+      .table-container {
+        margin-top: 12px;
+        overflow: auto;
+        max-height: 60vh;
+        border: 1px solid rgba(255,255,255,0.06);
+        border-radius: 12px;
+        background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
+      }
+      table { width: 100%; border-collapse: collapse; }
+      thead th {
+        position: sticky; top: 0; z-index: 1;
+        background: rgba(17,24,39,0.85);
+        border-bottom: 1px solid rgba(255,255,255,0.06);
+        text-align: left;
+        padding: 10px 12px;
+        font-size: 12px; color: #cbd5e1; text-transform: uppercase; letter-spacing: 0.06em;
+      }
+      tbody td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.04); font-size: 14px; color: #e5e7eb; }
+      tbody tr:nth-child(even) { background: rgba(255,255,255,0.02); }
+
       .loading, .error {
         margin-top: 8px;
         font-size: 14px;
@@ -227,12 +276,28 @@
           </p>
         </div>
       </section>
+
+      <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
+        <div class="card-content">
+          <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
+          <div class="search-row">
+            <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
+            <button id="search-btn" class="button" type="button">Search</button>
+            <div id="search-hint" class="footer-note">Full or partial match, case-insensitive.</div>
+          </div>
+          <div id="results-summary" class="subtitle" style="margin-top: 10px;"></div>
+          <div id="results-table" class="table-container"></div>
+        </div>
+      </section>
     </main>
 
     <!-- Papa Parse for robust CSV parsing -->
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
     <script>
+      let allRows = [];
+      let csvHeaders = [];
+
       const elements = {
         loading: document.getElementById('loading'),
         error: document.getElementById('error'),
@@ -243,6 +308,10 @@
         raceTotal: document.getElementById('race-total'),
         earliest: document.getElementById('race-earliest'),
         latest: document.getElementById('race-latest'),
+        searchInput: document.getElementById('search-input'),
+        searchBtn: document.getElementById('search-btn'),
+        resultsSummary: document.getElementById('results-summary'),
+        resultsTable: document.getElementById('results-table'),
       };
 
       const MONTHS = {
@@ -347,6 +416,64 @@
         };
       }
 
+      function attachSearchHandlers() {
+        if (!elements.searchInput || !elements.searchBtn) return;
+        const performSearch = () => {
+          const query = (elements.searchInput.value || '').trim().toLowerCase();
+          if (!query) {
+            elements.resultsSummary.textContent = 'Enter a name to search.';
+            elements.resultsTable.innerHTML = '';
+            return;
+          }
+          const results = allRows.filter(r => String(r['Name'] || '').toLowerCase().includes(query));
+          // Sort by date descending when possible
+          results.sort((a, b) => {
+            const da = parseDateFlexible(a['Date']);
+            const db = parseDateFlexible(b['Date']);
+            if (da && db) return db - da;
+            if (db) return 1;
+            if (da) return -1;
+            return 0;
+          });
+          renderResultsTable(results);
+        };
+        elements.searchBtn.addEventListener('click', performSearch);
+        elements.searchInput.addEventListener('keydown', (e) => {
+          if (e.key === 'Enter') performSearch();
+        });
+      }
+
+      function renderResultsTable(rows) {
+        elements.resultsSummary.textContent = `${rows.length.toLocaleString()} result${rows.length === 1 ? '' : 's'}`;
+        const headers = csvHeaders && csvHeaders.length ? csvHeaders : (rows[0] ? Object.keys(rows[0]) : []);
+        const table = document.createElement('table');
+        const thead = document.createElement('thead');
+        const trHead = document.createElement('tr');
+        for (const h of headers) {
+          const th = document.createElement('th');
+          th.textContent = h;
+          trHead.appendChild(th);
+        }
+        thead.appendChild(trHead);
+        table.appendChild(thead);
+
+        const tbody = document.createElement('tbody');
+        for (const row of rows) {
+          const tr = document.createElement('tr');
+          for (const h of headers) {
+            const td = document.createElement('td');
+            const value = row[h] != null ? String(row[h]) : '';
+            td.textContent = value;
+            tr.appendChild(td);
+          }
+          tbody.appendChild(tr);
+        }
+        table.appendChild(tbody);
+
+        elements.resultsTable.innerHTML = '';
+        elements.resultsTable.appendChild(table);
+      }
+
       async function loadData() {
         elements.loading.classList.remove('hidden');
         elements.error.classList.add('hidden');
@@ -370,6 +497,8 @@
                 }
                 const rows = result.data || [];
                 const stats = computeStats(rows);
+                allRows = rows;
+                csvHeaders = (result.meta && result.meta.fields) ? result.meta.fields : (rows[0] ? Object.keys(rows[0]) : []);
                 elements.perfTotal.textContent = stats.total.toLocaleString();
                 elements.perfMale.textContent = stats.male.toLocaleString();
                 elements.perfFemale.textContent = stats.female.toLocaleString();
@@ -378,6 +507,7 @@
                 elements.earliest.textContent = formatDate(stats.earliest);
                 elements.latest.textContent = formatDate(stats.latest);
                 elements.error.classList.add('hidden');
+                attachSearchHandlers();
               } catch (err) {
                 console.error('Failed to parse CSV:', err);
                 elements.error.classList.remove('hidden');
@@ -407,6 +537,8 @@
           }
           const rows = result.data || [];
           const stats = computeStats(rows);
+          allRows = rows;
+          csvHeaders = (result.meta && result.meta.fields) ? result.meta.fields : (rows[0] ? Object.keys(rows[0]) : []);
           elements.perfTotal.textContent = stats.total.toLocaleString();
           elements.perfMale.textContent = stats.male.toLocaleString();
           elements.perfFemale.textContent = stats.female.toLocaleString();
@@ -414,6 +546,7 @@
           elements.raceTotal.textContent = stats.races.toLocaleString();
           elements.earliest.textContent = formatDate(stats.earliest);
           elements.latest.textContent = formatDate(stats.latest);
+          attachSearchHandlers();
         } catch (err) {
           console.error('Failed to load CSV:', err);
           elements.error.classList.remove('hidden');
