--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
       .stats-grid {
         display: grid;
         grid-template-columns: repeat(6, minmax(0, 1fr));
-        gap: 16px;
+        gap: 24px; /* wider spacing between stat cards */
       }
       @media (max-width: 980px) {
-        .stats-grid { grid-template-columns: repeat(3, minmax(0, 1fr)); }
+        .stats-grid { grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 18px; }
       }
       @media (max-width: 640px) {
-        .stats-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); }
+        .stats-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 14px; }
       }
 
       .stat {
@@ -120,6 +120,7 @@
         border-radius: 14px;
         padding: 16px;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
+        min-width: 0; /* prevent overflow issues in grid */
       }
       .stat-label {
         display: flex;
@@ -145,7 +146,7 @@
       .pill.warning { color: #fde68a; border-color: rgba(245,158,11,0.35); background: rgba(245,158,11,0.08); }
 
       .stat-value { font-size: clamp(22px, 3vw, 28px); font-weight: 800; letter-spacing: -0.02em; color: #f3f4f6; }
-      .stat-value.nowrap { white-space: nowrap; }
+      .stat-value.nowrap { white-space: nowrap; font-size: clamp(18px, 2.1vw, 24px); }
       .stat-sub { color: var(--muted); font-size: 12px; margin-top: 6px; }
 
       .footer-note {
@@ -242,7 +243,7 @@
             </div>
 
             <div class="stat" role="listitem">
-              <div class="stat-label"><span class="pill">Races (unique Date + Meet)</span></div>
+              <div class="stat-label"><span class="pill">Races</span></div>
               <div class="stat-value" id="race-total">—</div>
             </div>
 
