--- a/index.html
+++ b/index.html
@@ -9,231 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-    <style>
-      :root {
-        --bg: #0f172a;          /* slate-900 */
-        --bg-accent: #111827;   /* gray-900 */
-        --card: rgba(17, 24, 39, 0.7);
-        --text: #e5e7eb;        /* gray-200 */
-        --muted: #9ca3af;       /* gray-400 */
-        --primary: #60a5fa;     /* blue-400 */
-        --primary-strong: #3b82f6; /* blue-500 */
-        --accent: #a78bfa;      /* violet-400 */
-        --success: #34d399;     /* emerald-400 */
-        --warning: #f59e0b;     /* amber-500 */
-        --danger: #f43f5e;      /* rose-500 */
-        --shadow: 0 10px 30px rgba(2, 6, 23, 0.6);
-        --radius: 16px;
-      }
-
-      * { box-sizing: border-box; }
-      html, body { height: 100%; }
-      body {
-        margin: 0;
-        font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-        color: var(--text);
-        background: radial-gradient(1200px 800px at 10% 10%, #1f2937 0%, var(--bg) 40%),
-                    radial-gradient(900px 600px at 90% 20%, #0b1020 0%, var(--bg) 50%),
-                    linear-gradient(180deg, #0b1020 0%, #0f172a 100%);
-        background-attachment: fixed;
-      }
-
-      header {
-        max-width: 1100px;
-        margin: 40px auto 16px;
-        padding: 0 20px;
-      }
-      .title {
-        font-weight: 800;
-        letter-spacing: -0.02em;
-        font-size: clamp(28px, 3.5vw, 48px);
-        margin: 0 0 8px;
-        background: linear-gradient(90deg, var(--primary-strong), var(--accent));
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-      }
-      .subtitle {
-        margin: 0;
-        color: var(--muted);
-        font-weight: 500;
-      }
-
-      main {
-        max-width: 1100px;
-        margin: 20px auto 80px;
-        padding: 0 20px;
-      }
-
-      .card {
-        position: relative;
-        background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-        border: 1px solid rgba(255,255,255,0.08);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        box-shadow: var(--shadow);
-        border-radius: var(--radius);
-        padding: 24px;
-        overflow: hidden;
-      }
-      .card::before {
-        content: "";
-        position: absolute;
-        inset: -2px;
-        background: radial-gradient(600px 200px at 0% 0%, rgba(96,165,250,0.18) 0%, rgba(96,165,250,0) 60%),
-                    radial-gradient(500px 150px at 100% 0%, rgba(167,139,250,0.18) 0%, rgba(167,139,250,0) 60%);
-        z-index: 0;
-        pointer-events: none;
-      }
-      .card-content { position: relative; z-index: 1; }
-
-      .section-title {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        font-weight: 700;
-        letter-spacing: 0.02em;
-        color: #d1d5db;
-        margin: 0 0 16px;
-      }
-      .card-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 16px;
-        flex-wrap: wrap;
-        margin-bottom: 12px;
-      }
-      .perf-inline {
-        display: flex;
-        align-items: baseline;
-        gap: 10px;
-        flex-wrap: wrap;
-        color: var(--muted);
-      }
-      .perf-inline .label { font-size: 12px; text-transform: uppercase; letter-spacing: 0.08em; }
-      .perf-inline .value { font-weight: 800; color: #f3f4f6; }
-      .perf-inline .all { color: var(--primary); }
-      .perf-inline .male { color: var(--success); }
-      .perf-inline .female { color: var(--warning); }
-      .perf-inline .sep { color: var(--muted); margin: 0 2px; }
-
-      .section-title .dot {
-        width: 10px; height: 10px; border-radius: 999px; background: var(--primary);
-        box-shadow: 0 0 20px rgba(59,130,246,0.7);
-      }
-
-      .stats-grid {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        gap: 24px; /* wider spacing between stat cards */
-      }
-      @media (max-width: 980px) {
-        .stats-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 18px; }
-      }
-      @media (max-width: 640px) {
-        .stats-grid { grid-template-columns: 1fr; gap: 14px; }
-      }
-
-      .stat {
-        background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-        border: 1px solid rgba(255,255,255,0.06);
-        border-radius: 14px;
-        padding: 16px;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
-        min-width: 0; /* prevent overflow issues in grid */
-      }
-      .stat-label {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        color: var(--muted);
-        font-size: 12px;
-        text-transform: uppercase;
-        letter-spacing: 0.08em;
-        margin-bottom: 8px;
-      }
-      .pill {
-        padding: 2px 8px;
-        border-radius: 999px;
-        font-size: 11px;
-        font-weight: 600;
-        border: 1px solid rgba(255,255,255,0.08);
-        background: rgba(255,255,255,0.04);
-        white-space: nowrap; /* prevent label wrapping like (ALL) on new line */
-      }
-      .pill.primary { color: #bfdbfe; border-color: rgba(96,165,250,0.35); background: rgba(96,165,250,0.08); }
-      .pill.success { color: #bbf7d0; border-color: rgba(52,211,153,0.35); background: rgba(52,211,153,0.08); }
-      .pill.warning { color: #fde68a; border-color: rgba(245,158,11,0.35); background: rgba(245,158,11,0.08); }
-
-      .stat-value { font-size: clamp(22px, 3vw, 28px); font-weight: 800; letter-spacing: -0.02em; color: #f3f4f6; }
-      .stat-value.nowrap { white-space: nowrap; font-size: clamp(18px, 2.1vw, 24px); }
-      .stat-sub { color: var(--muted); font-size: 12px; margin-top: 6px; }
-
-      .footer-note {
-        margin-top: 14px;
-        color: var(--muted);
-        font-size: 12px;
-      }
-
-      /* Search + table styles */
-      .search-row {
-        display: flex;
-        gap: 12px;
-        flex-wrap: wrap;
-        align-items: center;
-        margin-top: 6px;
-      }
-      .input {
-        padding: 10px 12px;
-        border-radius: 10px;
-        border: 1px solid rgba(255,255,255,0.08);
-        background: rgba(255,255,255,0.04);
-        color: var(--text);
-        outline: none;
-        min-width: 260px;
-      }
-      .input::placeholder { color: #9ca3af; }
-      .button {
-        padding: 10px 14px;
-        border-radius: 10px;
-        border: 1px solid rgba(96,165,250,0.35);
-        background: linear-gradient(180deg, rgba(96,165,250,0.25), rgba(96,165,250,0.12));
-        color: #e5f0ff;
-        font-weight: 600;
-        cursor: pointer;
-      }
-      .button:hover { filter: brightness(1.08); }
-
-      .table-container {
-        margin-top: 12px;
-        overflow: auto;
-        max-height: 60vh;
-        border: 1px solid rgba(255,255,255,0.06);
-        border-radius: 12px;
-        background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
-      }
-      table { width: 100%; border-collapse: collapse; }
-      thead th {
-        position: sticky; top: 0; z-index: 1;
-        background: rgba(17,24,39,0.85);
-        border-bottom: 1px solid rgba(255,255,255,0.06);
-        text-align: left;
-        padding: 10px 12px;
-        font-size: 12px; color: #cbd5e1; text-transform: uppercase; letter-spacing: 0.06em;
-      }
-      tbody td { padding: 12px; border-bottom: 1px solid rgba(255,255,255,0.04); font-size: 14px; color: #e5e7eb; }
-      tbody tr:nth-child(even) { background: rgba(255,255,255,0.02); }
-
-      .loading, .error {
-        margin-top: 8px;
-        font-size: 14px;
-        color: var(--muted);
-      }
-      .error { color: #fecaca; }
-      .hidden { display: none; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -319,269 +95,6 @@
 
     <!-- Papa Parse for robust CSV parsing -->
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-
-    <script>
-      let allRows = [];
-      let csvHeaders = [];
-
-      const elements = {
-        loading: document.getElementById('loading'),
-        error: document.getElementById('error'),
-        perfTotal: document.getElementById('perf-total'),
-        perfMale: document.getElementById('perf-male'),
-        perfFemale: document.getElementById('perf-female'),
-        perfBreakdown: document.getElementById('perf-breakdown'),
-        raceTotal: document.getElementById('race-total'),
-        earliest: document.getElementById('race-earliest'),
-        latest: document.getElementById('race-latest'),
-        searchInput: document.getElementById('search-input'),
-        searchBtn: document.getElementById('search-btn'),
-        resultsSummary: document.getElementById('results-summary'),
-        resultsTable: document.getElementById('results-table'),
-      };
-
-      const MONTHS = {
-        jan: 0, feb: 1, mar: 2, apr: 3, may: 4, jun: 5,
-        jul: 6, aug: 7, sep: 8, oct: 9, nov: 10, dec: 11
-      };
-
-      function toTwoDigitYear(y) {
-        const num = Number(y);
-        return num < 100 ? (num + 2000) : num;
-      }
-
-      function parseDateFlexible(input) {
-        if (!input || typeof input !== 'string') return null;
-        const raw = input.trim();
-
-        // d-MMM-yy or d-MMM-yyyy (e.g., 5-Jun-25)
-        if (raw.includes('-')) {
-          const parts = raw.split('-');
-          if (parts.length === 3) {
-            const [d, m, y] = parts;
-            const day = Number(d);
-            const mon = MONTHS[m.toLowerCase().slice(0,3)];
-            const year = toTwoDigitYear(y);
-            if (!Number.isNaN(day) && mon >= 0 && !Number.isNaN(year)) {
-              return new Date(year, mon, day);
-            }
-          }
-        }
-
-        // mm/dd/yyyy or mm/dd/yy
-        if (raw.includes('/')) {
-          const [mm, dd, yy] = raw.split('/').map(s => s.trim());
-          const month = Number(mm) - 1;
-          const day = Number(dd);
-          const year = toTwoDigitYear(yy);
-          if (!Number.isNaN(month) && !Number.isNaN(day) && !Number.isNaN(year)) {
-            return new Date(year, month, day);
-          }
-        }
-
-        // Fallback to Date.parse
-        const parsed = new Date(raw);
-        return isNaN(parsed.getTime()) ? null : parsed;
-      }
-
-      function formatDate(date) {
-        if (!date) return '—';
-        const fmt = new Intl.DateTimeFormat(undefined, { year: 'numeric', month: 'short', day: 'numeric' });
-        return fmt.format(date);
-      }
-
-      function normalizeGender(g) {
-        if (!g) return 'unknown';
-        const s = String(g).trim().toLowerCase();
-        if (s === 'm' || s === 'male') return 'male';
-        if (s === 'f' || s === 'female') return 'female';
-        return 'unknown';
-      }
-
-      function raceKey(dateStr, meetName) {
-        const date = parseDateFlexible(dateStr);
-        const name = (meetName || '').trim();
-        if (!date || !name) return null;
-        const key = [date.getFullYear(), String(date.getMonth()+1).padStart(2,'0'), String(date.getDate()).padStart(2,'0')].join('-');
-        return key + '::' + name.toLowerCase();
-      }
-
-      function computeStats(rows) {
-        let total = 0;
-        let male = 0;
-        let female = 0;
-        const raceSet = new Set();
-
-        let earliest = null;
-        let latest = null;
-
-        for (const r of rows) {
-          total += 1;
-
-          const g = normalizeGender(r['Gender']);
-          if (g === 'male') male += 1;
-          else if (g === 'female') female += 1;
-
-          const k = raceKey(r['Date'], r['Meet name']);
-          if (k) raceSet.add(k);
-
-          const d = parseDateFlexible(r['Date']);
-          if (d) {
-            if (!earliest || d < earliest) earliest = d;
-            if (!latest || d > latest) latest = d;
-          }
-        }
-
-        return {
-          total,
-          male,
-          female,
-          races: raceSet.size,
-          earliest,
-          latest,
-        };
-      }
-
-      function attachSearchHandlers() {
-        if (!elements.searchInput || !elements.searchBtn) return;
-        const performSearch = () => {
-          const query = (elements.searchInput.value || '').trim().toLowerCase();
-          if (!query) {
-            elements.resultsSummary.textContent = 'Enter a name to search.';
-            elements.resultsTable.innerHTML = '';
-            return;
-          }
-          const results = allRows.filter(r => String(r['Name'] || '').toLowerCase().includes(query));
-          // Sort by date descending when possible
-          results.sort((a, b) => {
-            const da = parseDateFlexible(a['Date']);
-            const db = parseDateFlexible(b['Date']);
-            if (da && db) return db - da;
-            if (db) return 1;
-            if (da) return -1;
-            return 0;
-          });
-          renderResultsTable(results);
-        };
-        elements.searchBtn.addEventListener('click', performSearch);
-        elements.searchInput.addEventListener('keydown', (e) => {
-          if (e.key === 'Enter') performSearch();
-        });
-      }
-
-      function renderResultsTable(rows) {
-        elements.resultsSummary.textContent = `${rows.length.toLocaleString()} result${rows.length === 1 ? '' : 's'}`;
-        const headers = csvHeaders && csvHeaders.length ? csvHeaders : (rows[0] ? Object.keys(rows[0]) : []);
-        const table = document.createElement('table');
-        const thead = document.createElement('thead');
-        const trHead = document.createElement('tr');
-        for (const h of headers) {
-          const th = document.createElement('th');
-          th.textContent = h;
-          trHead.appendChild(th);
-        }
-        thead.appendChild(trHead);
-        table.appendChild(thead);
-
-        const tbody = document.createElement('tbody');
-        for (const row of rows) {
-          const tr = document.createElement('tr');
-          for (const h of headers) {
-            const td = document.createElement('td');
-            const value = row[h] != null ? String(row[h]) : '';
-            td.textContent = value;
-            tr.appendChild(td);
-          }
-          tbody.appendChild(tr);
-        }
-        table.appendChild(tbody);
-
-        elements.resultsTable.innerHTML = '';
-        elements.resultsTable.appendChild(table);
-      }
-
-      async function loadData() {
-        elements.loading.classList.remove('hidden');
-        elements.error.classList.add('hidden');
-
-        // If running from file://, ask user to pick the CSV instead of fetching
-        if (location.protocol === 'file:') {
-          elements.loading.classList.add('hidden');
-          const picker = document.getElementById('local-picker');
-          const input = document.getElementById('csv-file-input');
-          picker.classList.remove('hidden');
-          input.addEventListener('change', () => {
-            const file = input.files && input.files[0];
-            if (!file) return;
-            elements.loading.classList.remove('hidden');
-            const reader = new FileReader();
-            reader.onload = () => {
-              try {
-                const result = Papa.parse(reader.result, { header: true, skipEmptyLines: true });
-                if (result.errors && result.errors.length) {
-                  console.warn('CSV parse warnings:', result.errors);
-                }
-                const rows = result.data || [];
-                const stats = computeStats(rows);
-                allRows = rows;
-                csvHeaders = (result.meta && result.meta.fields) ? result.meta.fields : (rows[0] ? Object.keys(rows[0]) : []);
-                elements.perfTotal.textContent = stats.total.toLocaleString();
-                elements.perfMale.textContent = stats.male.toLocaleString();
-                elements.perfFemale.textContent = stats.female.toLocaleString();
-                elements.perfBreakdown.textContent = `M ${stats.male.toLocaleString()} · F ${stats.female.toLocaleString()}`;
-                elements.raceTotal.textContent = stats.races.toLocaleString();
-                elements.earliest.textContent = formatDate(stats.earliest);
-                elements.latest.textContent = formatDate(stats.latest);
-                elements.error.classList.add('hidden');
-                attachSearchHandlers();
-              } catch (err) {
-                console.error('Failed to parse CSV:', err);
-                elements.error.classList.remove('hidden');
-                elements.error.textContent = 'Failed to parse CSV file.';
-              } finally {
-                elements.loading.classList.add('hidden');
-              }
-            };
-            reader.onerror = () => {
-              elements.loading.classList.add('hidden');
-              elements.error.classList.remove('hidden');
-              elements.error.textContent = 'Failed to read the selected file.';
-            };
-            reader.readAsText(file);
-          }, { once: true });
-          return;
-        }
-
-        // Normal http(s) flow
-        try {
-          const response = await fetch('all-data.csv', { cache: 'no-store' });
-          if (!response.ok) throw new Error('HTTP ' + response.status);
-          const csvText = await response.text();
-          const result = Papa.parse(csvText, { header: true, skipEmptyLines: true });
-          if (result.errors && result.errors.length) {
-            console.warn('CSV parse warnings:', result.errors);
-          }
-          const rows = result.data || [];
-          const stats = computeStats(rows);
-          allRows = rows;
-          csvHeaders = (result.meta && result.meta.fields) ? result.meta.fields : (rows[0] ? Object.keys(rows[0]) : []);
-          elements.perfTotal.textContent = stats.total.toLocaleString();
-          elements.perfMale.textContent = stats.male.toLocaleString();
-          elements.perfFemale.textContent = stats.female.toLocaleString();
-          elements.perfBreakdown.textContent = `M ${stats.male.toLocaleString()} · F ${stats.female.toLocaleString()}`;
-          elements.raceTotal.textContent = stats.races.toLocaleString();
-          elements.earliest.textContent = formatDate(stats.earliest);
-          elements.latest.textContent = formatDate(stats.latest);
-          attachSearchHandlers();
-        } catch (err) {
-          console.error('Failed to load CSV:', err);
-          elements.error.classList.remove('hidden');
-        } finally {
-          elements.loading.classList.add('hidden');
-        }
-      }
-
-      loadData();
-    </script>
+    <script defer src="app.js"></script>
   </body>
 </html>
