--- a/index.html
+++ b/index.html
@@ -61,35 +61,13 @@
           </div>
           <div class="loading" id="loading">Loading data…</div>
           <div class="error hidden" id="error">Failed to load data. Please try again later.</div>
-          <div class="footer-note">One performance equals one row in <code>all-data.csv</code>. A race is defined as a unique combination of Date and Meet name.</div>
+          <div class="footer-note">This is an unofficial, preliminary list and will be updated over time as more data is added. It is a 'best effort' site compiled by volunteers from public data. </div>
 
           <div id="local-picker" class="hidden" style="margin-top:16px;">
             <label style="display:block; margin-bottom:8px; color: var(--muted); font-size: 13px;">Open locally without a server: select <code>all-data.csv</code></label>
             <input id="csv-file-input" type="file" accept=".csv,text/csv" />
             <div class="footer-note">This fallback is only needed when opening the page via <code>file://</code>. On GitHub Pages or a local server, the CSV loads automatically.</div>
           </div>
-        </div>
-      </section>
-
-      <section class="card" aria-labelledby="notice-title" style="margin-top: 20px;">
-        <div class="card-content">
-          <h2 id="notice-title" class="section-title"><span class="dot"></span>Notice</h2>
-          <p class="subtitle" style="max-width: 80ch;">
-            This is an unofficial, preliminary list and will be updated over time as more data is added.
-          </p>
-        </div>
-      </section>
-
-      <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
-        <div class="card-content">
-          <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
-          <div class="search-row">
-            <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
-            <button id="search-btn" class="button" type="button">Search</button>
-            <div id="search-hint" class="footer-note">Full or partial match, case-insensitive.</div>
-          </div>
-          <div id="results-summary" class="subtitle" style="margin-top: 10px;"></div>
-          <div id="results-table" class="table-container"></div>
         </div>
       </section>
 
@@ -118,6 +96,19 @@
             </div>
           </div>
           <div id="age-leaderboard" class="age-grid"></div>
+        </div>
+      </section>
+
+      <section class="card" aria-labelledby="search-title" style="margin-top: 20px;">
+        <div class="card-content">
+          <h2 id="search-title" class="section-title"><span class="dot"></span>Check your results</h2>
+          <div class="search-row">
+            <input id="search-input" class="input" type="text" placeholder="Enter name (e.g., Jane Doe)" />
+            <button id="search-btn" class="button" type="button">Search</button>
+            <div id="search-hint" class="footer-note">Full or partial match, case-insensitive.</div>
+          </div>
+          <div id="results-summary" class="subtitle" style="margin-top: 10px;"></div>
+          <div id="results-table" class="table-container"></div>
         </div>
       </section>
     </main>
