--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="theme-toggle" aria-label="Theme selector">
+      <div class="segmented" role="tablist" aria-label="Theme">
+        <button id="theme-dark" class="seg-btn active" role="tab" aria-selected="true" type="button">🌙 Dark</button>
+        <button id="theme-light" class="seg-btn" role="tab" aria-selected="false" type="button">☀️ Light</button>
+      </div>
+    </div>
     <header>
       <h1 class="title">Colorado Masters Race Project</h1>
       <p class="subtitle">Aggregated results for Colorado Masters track races</p>
