--- a/index.html
+++ b/index.html
@@ -102,6 +102,39 @@
             </div>
           </div>
           <div id="age-leaderboard" class="age-grid"></div>
+
+          <div id="custom-panel" class="custom-panel hidden" aria-labelledby="custom-title">
+            <h3 id="custom-title" class="section-title" style="margin-top: 8px; font-size: 16px;">
+              <span class="dot"></span>Analyze by custom ages
+            </h3>
+            <div class="range-controls">
+              <div class="range-row">
+                <label class="footer-note">Age range</label>
+                <div class="range-inputs">
+                  <input id="age-min" type="range" min="30" max="100" value="30" step="1" />
+                  <input id="age-max" type="range" min="30" max="100" value="100" step="1" />
+                </div>
+                <div class="range-values">
+                  <span>Min: <strong id="age-min-val">30</strong></span>
+                  <span>Max: <strong id="age-max-val">100</strong></span>
+                </div>
+              </div>
+
+              <div class="range-row" style="margin-top: 10px;">
+                <label class="footer-note">Gender</label>
+                <div class="segmented small" role="tablist" aria-label="Custom gender filter">
+                  <button id="cgen-all" class="seg-btn active" role="tab" aria-selected="true" type="button">All</button>
+                  <button id="cgen-male" class="seg-btn" role="tab" aria-selected="false" type="button">Male</button>
+                  <button id="cgen-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
+                </div>
+                <button id="analyze-btn" class="button" type="button" style="margin-left:auto;">Analyze</button>
+              </div>
+            </div>
+
+            <div id="custom-results" class="table-container" style="margin-top:14px;">
+              <ul class="mini-list" id="custom-results-list" style="margin:0; padding:12px;"></ul>
+            </div>
+          </div>
         </div>
       </section>
 
