--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
                 <label class="footer-note">Age range</label>
                 <div class="range-inputs">
                   <input id="age-min" type="range" min="30" max="100" value="30" step="1" />
+                  <input id="age-max" type="range" min="30" max="100" value="100" step="1" />
                 </div>
                 <div class="range-values">
                   <span>Min age: <strong id="age-min-val">30</strong></span>
-                  <span>Max age: <strong>100</strong></span>
+                  <span>Max age: <strong id="age-max-val">100</strong></span>
                 </div>
               </div>
 
@@ -134,7 +135,10 @@
               <ul class="mini-list" id="custom-results-list" style="margin:0; padding:12px;"></ul>
             </div>
 
-            <div id="custom-histogram" class="histogram" aria-label="Time distribution"></div>
+            <div id="custom-histogram" class="histogram" aria-label="Time distribution">
+              <div class="hist-bars"></div>
+              <div class="hist-axis"></div>
+            </div>
           </div>
         </div>
       </section>
