adding overall analytics

--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@
             <select id="event-select" class="input" style="min-width: 260px;">
               <option value="" selected disabled>Select an event…</option>
             </select>
+            <button id="analyze-event-btn" class="button" type="button">Analyze event</button>
           </div>
           <div id="age-leaderboard" class="age-grid"></div>
+
+          <div id="event-chart" class="chart hidden" aria-label="Best time by age (per event)"></div>
 
           <div id="custom-panel" class="custom-panel hidden" aria-labelledby="custom-title">
             <h3 id="custom-title" class="section-title" style="margin-top: 8px; font-size: 16px;">
