adding sources page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <header>
       <h1 class="title">Colorado Masters Race Project</h1>
       <p class="subtitle">Aggregated results for Colorado Masters track races</p>
+      <div class="header-actions">
+        <a class="button" href="sources.html" aria-label="View data sources">Sources</a>
+      </div>
     </header>
 
     <main>
