adding BRR races from 2004-2009

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="footer-note">This is an unofficial, preliminary list and will be updated over time as more data is added. It is a created by volunteers on a 'best efforts' basis from <a class="inline-link" href="sources.html">public data sources</a>.</div>
 
           <div id="local-picker" class="hidden" style="margin-top:16px;">
-            <label style="display:block; margin-bottom:8px; color: var(--muted); font-size: 13px;">Open locally without a server: select <code>all-data.csv</code></label>
+            <label style="display:block; margin-bottom:8px; color: var(--muted); font-size: 13px;">Open locally without a server: select <code>outdoor-track-data.csv</code></label>
             <input id="csv-file-input" type="file" accept=".csv,text/csv" />
             <div class="footer-note">This fallback is only needed when opening the page via <code>file://</code>. On GitHub Pages or a local server, the CSV loads automatically.</div>
           </div>
