adding detail to sources page

--- a/sources.html
+++ b/sources.html
@@ -19,7 +19,7 @@
     </div>
     <header>
       <h1 class="title">Data Sources</h1>
-      <p class="subtitle">Where our race data comes from</p>
+      <p class="subtitle">Where our race data comes from. We will be adding more sources as the project progresses.</p>
       <div class="header-actions">
         <a class="button" href="index.html" aria-label="Back to main">← Back to main</a>
       </div>
@@ -32,7 +32,7 @@
           <div class="grid" role="list">
             <a class="link-card" role="listitem" href="https://boulderroadrunners.org/race-results/track-meets/" target="_blank" rel="noopener noreferrer" aria-label="Boulder Road Runners results">
               <h3>Boulder Road Runners</h3>
-              <p>All-Comers Summer Track & Field Meet results across years.</p>
+              <p>All-Comers Summer Track & Field Meet results across years. Currently includes: (2004-2014)</p>
             </a>
             <!-- Add more source cards here as new sources are integrated -->
           </div>
