separating meets and events

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           </div>
           <div class="stats-grid" role="list">
             <div class="stat" role="listitem">
+              <div class="stat-label"><span class="pill">Meets</span></div>
+              <div class="stat-value" id="meet-total">—</div>
+            </div>
+
+            <div class="stat" role="listitem">
               <div class="stat-label"><span class="pill">Races</span></div>
               <div class="stat-value" id="race-total">—</div>
             </div>
