--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
               <button id="btn-female" class="seg-btn" role="tab" aria-selected="false" type="button">Female</button>
               <button id="btn-custom" class="seg-btn" role="tab" aria-selected="false" type="button">Custom ages</button>
             </div>
+            <div class="control-row" style="margin-top: 12px;">
+              <label class="toggle-container">
+                <input type="checkbox" id="one-per-athlete" />
+                <span class="toggle-slider"></span>
+                <span class="toggle-label">1 per athlete</span>
+              </label>
+            </div>
           </div>
           <div class="control-row" style="margin-bottom:12px;">
             <label for="event-select" class="footer-note" style="margin: 0 8px 0 0;">Event</label>
