adding Denver Twilight Series 2023 races

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
   <main>
     <div class="top-right">
-      <a href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank"
-        rel="noopener noreferrer">Recent changes</a>
+      <a class="button top-link" href="sources.html">Data sources</a>
+      <a class="button top-link" href="https://github.com/billpottle/colorado-masters-race-project/commits/main/" target="_blank" rel="noopener noreferrer">Recent changes</a>
     </div>
     <section class="card" aria-labelledby="overview-title">
       <div class="card-content">
